# Linux-Praktikum

./: .gitignore  README.md
linux_p1/: array.sh  calc.sh  hello_world.sh  if.sh  loops.sh  user.sh  variables.sh
linux_p1/keydir/: example.conf  get_usernames.sh  update_users.sh
linux_p2/Task3.1/: hello_world.cpp  main.cpp  makefile
linux_p2/Task3.2/: linux-20.bib  makefile  makefilegeorge
linux_p3/: CMakeLists.txt
linux_p3/src/: MyLibrary.cpp  hello_world.cpp
linux_p4/: child_one.sh  endless_date.sh  parent.sh
